follower configuration files/etc/envoy/envoy.yml
node:
  id: main
  cluster: kafka

dns_resolution_config:
  resolvers:
  - socket_address:
      address: 127.0.0.1
      port_value: 8600

static_resources:
  listeners:
  - {
    "address": {
        "socket_address": {
            "address": "127.0.0.1",
            "port_value": 2181
        }
    },
    "filter_chains": [
        {
            "filters": [
                {
                    "name": "envoy.filters.network.tcp_proxy",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                        "cluster": "front_cluster_zookeeper",
                        "stat_prefix": "front_cluster_zookeeper_tcp"
                    }
                }
            ]
        }
    ],
    "name": "front_listener_zookeeper"
}

  - {
    "address": {
        "socket_address": {
            "address": "127.0.0.1",
            "port_value": 9092
        }
    },
    "filter_chains": [
        {
            "filters": [
                {
                    "name": "envoy.filters.network.kafka_broker",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.kafka_broker.v3.KafkaBroker",
                        "stat_prefix": "front_cluster_kafka_bootstrap_kafka"
                    }
                },
                {
                    "name": "envoy.filters.network.tcp_proxy",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
                        "cluster": "front_cluster_kafka_bootstrap",
                        "stat_prefix": "front_cluster_kafka_bootstrap_tcp"
                    }
                }
            ]
        }
    ],
    "name": "front_kafka_bootstrap"
}

  - {
    "address": {
        "socket_address": {
            "address": "127.0.0.1",
            "port_value": 8081
        }
    },
    "filter_chains": [
        {
            "filters": [
                {
                    "name": "envoy.filters.network.http_connection_manager",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "codec_type": "auto",
                        "http_filters": [
                            {
                                "name": "envoy.filters.http.router",
                                "typed_config": {}
                            }
                        ],
                        "route_config": {
                            "name": "local_route",
                            "virtual_hosts": [
                                {
                                    "domains": [
                                        "*"
                                    ],
                                    "name": "backend",
                                    "routes": [
                                        {
                                            "match": {
                                                "prefix": "/"
                                            },
                                            "route": {
                                                "cluster": "front_cluster_schema_registry"
                                            }
                                        }
                                    ]
                                }
                            ]
                        },
                        "stat_prefix": "front_cluster_schema_registry"
                    }
                }
            ]
        }
    ],
    "name": "front_schema_registry"
}

  - {
    "address": {
        "socket_address": {
            "address": "127.0.0.1",
            "port_value": 8083
        }
    },
    "filter_chains": [
        {
            "filters": [
                {
                    "name": "envoy.filters.network.http_connection_manager",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "codec_type": "auto",
                        "http_filters": [
                            {
                                "name": "envoy.filters.http.router",
                                "typed_config": {}
                            }
                        ],
                        "route_config": {
                            "name": "local_route",
                            "virtual_hosts": [
                                {
                                    "domains": [
                                        "*"
                                    ],
                                    "name": "backend",
                                    "routes": [
                                        {
                                            "match": {
                                                "prefix": "/"
                                            },
                                            "route": {
                                                "cluster": "front_cluster_kafka_connect"
                                            }
                                        }
                                    ]
                                }
                            ]
                        },
                        "stat_prefix": "front_cluster_kafka_connect"
                    }
                }
            ]
        }
    ],
    "name": "front_kafka_connect"
}

  - {
    "address": {
        "socket_address": {
            "address": "127.0.0.1",
            "port_value": 8088
        }
    },
    "filter_chains": [
        {
            "filters": [
                {
                    "name": "envoy.filters.network.http_connection_manager",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "codec_type": "auto",
                        "http_filters": [
                            {
                                "name": "envoy.filters.http.router",
                                "typed_config": {}
                            }
                        ],
                        "route_config": {
                            "name": "local_route",
                            "virtual_hosts": [
                                {
                                    "domains": [
                                        "*"
                                    ],
                                    "name": "backend",
                                    "routes": [
                                        {
                                            "match": {
                                                "prefix": "/"
                                            },
                                            "route": {
                                                "cluster": "front_cluster_ksql"
                                            }
                                        }
                                    ]
                                }
                            ]
                        },
                        "stat_prefix": "front_cluster_ksql"
                    }
                }
            ]
        }
    ],
    "name": "front_ksql"
}

  - {
    "address": {
        "socket_address": {
            "address": "127.0.0.1",
            "port_value": 8082
        }
    },
    "filter_chains": [
        {
            "filters": [
                {
                    "name": "envoy.filters.network.http_connection_manager",
                    "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                        "codec_type": "auto",
                        "http_filters": [
                            {
                                "name": "envoy.filters.http.router",
                                "typed_config": {}
                            }
                        ],
                        "route_config": {
                            "name": "local_route",
                            "virtual_hosts": [
                                {
                                    "domains": [
                                        "*"
                                    ],
                                    "name": "backend",
                                    "routes": [
                                        {
                                            "match": {
                                                "prefix": "/"
                                            },
                                            "route": {
                                                "cluster": "front_cluster_kafka_rest"
                                            }
                                        }
                                    ]
                                }
                            ]
                        },
                        "stat_prefix": "front_cluster_kafka_rest"
                    }
                }
            ]
        }
    ],
    "name": "front_kafka_rest"
}


  clusters:
  - {
    "connect_timeout": "1s",
    "lb_policy": "round_robin",
    "load_assignment": {
        "cluster_name": "front_cluster_zookeeper",
        "endpoints": [
            {
                "lb_endpoints": [
                    {
                        "endpoint": {
                            "address": {
                                "socket_address": {
                                    "address": "zookeeper.service.ctera",
                                    "port_value": 12181
                                }
                            }
                        }
                    }
                ]
            }
        ]
    },
    "name": "front_cluster_zookeeper",
    "transport_socket": {
        "name": "envoy.transport_sockets.tls",
        "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
                "tls_certificate_sds_secret_configs": {
                    "name": "tls_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-tls-certificate.json",
                        "resource_api_version": "V3"
                    }
                },
                "validation_context_sds_secret_config": {
                    "name": "validation_context_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-validation-context.json",
                        "resource_api_version": "V3"
                    }
                }
            }
        }
    },
    "type": "strict_dns"
}


  - {
    "connect_timeout": "1s",
    "lb_policy": "round_robin",
    "load_assignment": {
        "cluster_name": "front_cluster_kafka_bootstrap",
        "endpoints": [
            {
                "lb_endpoints": [
                    {
                        "endpoint": {
                            "address": {
                                "socket_address": {
                                    "address": "kafka-bootstrap.service.ctera",
                                    "port_value": 19092
                                }
                            }
                        }
                    }
                ]
            }
        ]
    },
    "name": "front_cluster_kafka_bootstrap",
    "transport_socket": {
        "name": "envoy.transport_sockets.tls",
        "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
                "tls_certificate_sds_secret_configs": {
                    "name": "tls_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-tls-certificate.json",
                        "resource_api_version": "V3"
                    }
                },
                "validation_context_sds_secret_config": {
                    "name": "validation_context_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-validation-context.json",
                        "resource_api_version": "V3"
                    }
                }
            }
        }
    },
    "type": "strict_dns"
}


  - {
    "connect_timeout": "1s",
    "lb_policy": "round_robin",
    "load_assignment": {
        "cluster_name": "secure_kafka_bootstrap",
        "endpoints": [
            {
                "lb_endpoints": [
                    {
                        "endpoint": {
                            "address": {
                                "socket_address": {
                                    "address": "kafka-bootstrap.service.ctera",
                                    "port_value": 39092
                                }
                            }
                        }
                    }
                ]
            }
        ]
    },
    "name": "secure_kafka_bootstrap",
    "type": "strict_dns"
}


  - {
    "connect_timeout": "1s",
    "lb_policy": "round_robin",
    "load_assignment": {
        "cluster_name": "front_cluster_schema_registry",
        "endpoints": [
            {
                "lb_endpoints": [
                    {
                        "endpoint": {
                            "address": {
                                "socket_address": {
                                    "address": "schema-registry.service.ctera",
                                    "port_value": 18081
                                }
                            }
                        }
                    }
                ]
            }
        ]
    },
    "name": "front_cluster_schema_registry",
    "transport_socket": {
        "name": "envoy.transport_sockets.tls",
        "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
                "tls_certificate_sds_secret_configs": {
                    "name": "tls_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-tls-certificate.json",
                        "resource_api_version": "V3"
                    }
                },
                "validation_context_sds_secret_config": {
                    "name": "validation_context_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-validation-context.json",
                        "resource_api_version": "V3"
                    }
                }
            }
        }
    },
    "type": "strict_dns"
}


  - {
    "connect_timeout": "1s",
    "lb_policy": "round_robin",
    "load_assignment": {
        "cluster_name": "front_cluster_kafka_connect",
        "endpoints": [
            {
                "lb_endpoints": [
                    {
                        "endpoint": {
                            "address": {
                                "socket_address": {
                                    "address": "kafka-connect.service.ctera",
                                    "port_value": 18083
                                }
                            }
                        }
                    }
                ]
            }
        ]
    },
    "name": "front_cluster_kafka_connect",
    "transport_socket": {
        "name": "envoy.transport_sockets.tls",
        "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
                "tls_certificate_sds_secret_configs": {
                    "name": "tls_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-tls-certificate.json",
                        "resource_api_version": "V3"
                    }
                },
                "validation_context_sds_secret_config": {
                    "name": "validation_context_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-validation-context.json",
                        "resource_api_version": "V3"
                    }
                }
            }
        }
    },
    "type": "strict_dns"
}


  - {
    "connect_timeout": "1s",
    "lb_policy": "round_robin",
    "load_assignment": {
        "cluster_name": "front_cluster_ksql",
        "endpoints": [
            {
                "lb_endpoints": [
                    {
                        "endpoint": {
                            "address": {
                                "socket_address": {
                                    "address": "ksql.service.ctera",
                                    "port_value": 18088
                                }
                            }
                        }
                    }
                ]
            }
        ]
    },
    "name": "front_cluster_ksql",
    "transport_socket": {
        "name": "envoy.transport_sockets.tls",
        "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
                "tls_certificate_sds_secret_configs": {
                    "name": "tls_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-tls-certificate.json",
                        "resource_api_version": "V3"
                    }
                },
                "validation_context_sds_secret_config": {
                    "name": "validation_context_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-validation-context.json",
                        "resource_api_version": "V3"
                    }
                }
            }
        }
    },
    "type": "strict_dns"
}


  - {
    "connect_timeout": "1s",
    "lb_policy": "round_robin",
    "load_assignment": {
        "cluster_name": "front_cluster_kafka_rest",
        "endpoints": [
            {
                "lb_endpoints": [
                    {
                        "endpoint": {
                            "address": {
                                "socket_address": {
                                    "address": "kafka-rest.service.ctera",
                                    "port_value": 18082
                                }
                            }
                        }
                    }
                ]
            }
        ]
    },
    "name": "front_cluster_kafka_rest",
    "transport_socket": {
        "name": "envoy.transport_sockets.tls",
        "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "common_tls_context": {
                "tls_certificate_sds_secret_configs": {
                    "name": "tls_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-tls-certificate.json",
                        "resource_api_version": "V3"
                    }
                },
                "validation_context_sds_secret_config": {
                    "name": "validation_context_sds",
                    "sds_config": {
                        "path": "/etc/envoy/xds/sds-validation-context.json",
                        "resource_api_version": "V3"
                    }
                }
            }
        }
    },
    "type": "strict_dns"
}


  - {
    "connect_timeout": "1s",
    "lb_policy": "round_robin",
    "load_assignment": {
        "cluster_name": "front_cluster_logstash",
        "endpoints": [
            {
                "lb_endpoints": [
                    {
                        "endpoint": {
                            "address": {
                                "socket_address": {
                                    "address": "messaging-logstash.service.ctera",
                                    "port_value": 5044
                                }
                            }
                        }
                    }
                ]
            }
        ]
    },
    "name": "front_cluster_logstash",
    "type": "strict_dns"
}



dynamic_resources:
  cds_config:
    path: /etc/envoy/xds/cds.json
    resource_api_version: V3
  lds_config:
    path: /etc/envoy/xds/lds.json
    resource_api_version: V3

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 49000
